# 3D-Environment-construction-for-PX4-drone-with-2D-lidar-and-obstacle-avoidance

./: .gitignore  CMakeLists.txt  README.md  run_pc_viewer.sh
lidar_cpp/: CMakeLists.txt  package.xml
lidar_cpp/src/: tilt_broadcaster.cpp
mission_obs_avoid/: CMakeLists.txt  README.md  package.xml
mission_obs_avoid/config/: mission_obs_avoid.yaml
mission_obs_avoid/launch/: mission_obs_avoid.launch.py
mission_obs_avoid/scripts/: start_mission_obs_avoid.sh
mission_obs_avoid/src/: cmd_vel_arbiter_node.cpp  mission_interceptor_node.cpp
my_package/: package.xml
odom_flatten/: CMakeLists.txt
pc_env_viewer/: README.md
pc_env_viewer/src/: main.cpp
pc_env_viewer/src/app/: MainWindow.cpp  MainWindow.h  ViewerWidget.cpp  ViewerWidget.h
pc_env_viewer/src/core/: CliOptions.cpp  CloudAsset.h  CloudLoader.cpp  CloudLoader.h  CloudProcessor.cpp  CloudProcessor.h  CloudRenderer.cpp  CloudRenderer.h  Result.h
pc_env_viewer/tests/: test_cli_headless.cpp
pc_env_viewer_no_ros/: CMakeLists.txt  README.md
pc_env_viewer_no_ros/src/: main.cpp
pc_env_viewer_no_ros/src/app/: MainWindow.cpp  MainWindow.h  ViewerWidget.cpp  ViewerWidget.h
pc_env_viewer_no_ros/src/core/: CliOptions.h  CloudAsset.h  CloudRenderer.cpp  CloudRenderer.h
pc_env_viewer_no_ros/tests/: test_loader.cpp
pc_env_viewer_no_ros/tests/data/: corrupt.pcd  simple_xyz.pcd
rplidar_ros/: CMakeLists.txt
rplidar_ros/rviz/: rplidar_ros.rviz
scripts/: start_flight_mode.sh  start_mapping_mode.sh  start_sim_stack_terminator.sh  start_slam_mapper.sh  start_spiral_mapping_mode.sh
slam_config/: ekf_2d.yaml
slam_toolbox/: CMakeLists.txt  Dockerfile  README.md  package.xml
slam_toolbox/config/: mapper_params_online_multi_async.yaml
slam_toolbox/include/slam_toolbox/: loop_closure_assistant.hpp  loop_closure_listener.hpp  merge_maps_kinematic.hpp  slam_toolbox_common.hpp  toolbox_msgs.hpp  toolbox_types.hpp
slam_toolbox/launch/: lifelong_launch.py  localization_launch.py  online_async_launch.py  online_sync_launch.py
slam_toolbox/rviz_plugin/: slam_toolbox_rviz_plugin.cpp
slam_toolbox/src/: loop_closure_listener.cpp  slam_toolbox_common.cpp  slam_toolbox_localization.cpp
slam_toolbox/srv/: DeserializePoseGraph.srv
src/: local_planner_mode_a.cpp  spiral_mapping_mode.cpp
uav_stack_bringup/: CMakeLists.txt  README.md  package.xml
uav_stack_bringup/config/: slam_mapping_fast.yaml
uav_stack_bringup/docs/: m1_tuning_tracks.md
vertical_lidar_mapper/: CMakeLists.txt  README.md  package.xml
vertical_lidar_mapper/config/: params.yaml
vertical_lidar_mapper/include/vertical_lidar_mapper/: vertical_lidar_mapper.hpp
vertical_lidar_mapper/launch/: vertical_lidar_mapper.launch.py
vertical_lidar_mapper/src/: odom_to_tf_bridge.cpp  scan_frame_override.cpp  vertical_lidar_mapper.cpp
